--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
+    "start": "json-server --watch ./src/backend-mock/db.json & npx nx serve",
     "build": "nx build",
     "test": "nx test"
   },
@@ -49,6 +49,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.3",
+    "json-server": "^0.17.4",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "17.1.2",
     "prettier": "^2.6.2",
